wacc/test/golden/syntaxErr.basic.noBody
# program missing body

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin end


In test/wacc_examples/invalid/syntaxErr/basic/noBody.wacc (line 11, column 7):
  unexpected keyword end
  expected function declaration or statement
  missing main program body
  >
  >begin end
         ^^^
  >